[package]
name = "rust-tokio"
version = "0.1.0"
authors = ["R. Mark Volkmann <r.mark.volkmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
rand = "0.8.2"
tokio = { version = "1.2.0", features = ["full"]}
